feat: rework sign in and sign up pages

--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -15,6 +15,7 @@
     "useUnknownInCatchVariables": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
+    "jsx": "react"
   },
   "include": [
     "src/**/*",
