feat: implement creating products

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -32,3 +32,8 @@ WEB_URL=http://localhost:3002
 # CLOUD_STORAGE_ACCESS_KEY_ID=...
 # CLOUD_STORAGE_SECRET_ACCESS_KEY=..
 # CLOUD_STORAGE_BUCKET=...
+
+# Firebase
+
+FIREBASE_CREDENTIALS={...}
+FIREBASE_STORAGE_BUCKET=...,
