feat: implement my products page

--- a/apps/web/.env.staging
+++ b/apps/web/.env.staging
@@ -7,3 +7,7 @@ NEXT_PUBLIC_WEB_URL=https://ship-staging.paralect.com
 
 # Mixpanel
 # NEXT_PUBLIC_MIXPANEL_API_KEY=...
+
+# Firebase
+
+FIREBASE_BUCKET=paralect-vacancy-test-task.appspot.com
