--- a/apps/web/.env.development
+++ b/apps/web/.env.development
@@ -7,3 +7,7 @@ NEXT_PUBLIC_WEB_URL=http://localhost:3002
 
 # Mixpanel
 # NEXT_PUBLIC_MIXPANEL_API_KEY=...
+
+# Firebase
+
+FIREBASE_BUCKET=paralect-vacancy-test-task.appspot.com
