--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -7,3 +7,7 @@ NEXT_PUBLIC_WEB_URL=https://ship-demo.paralect.com
 
 # Mixpanel
 # NEXT_PUBLIC_MIXPANEL_API_KEY=...
+
+# Firebase
+
+FIREBASE_BUCKET=paralect-vacancy-test-task.appspot.com
