--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -36,4 +36,9 @@ WEB_URL=http://localhost:3002
 # Firebase
 
 FIREBASE_CREDENTIALS={...}
-FIREBASE_STORAGE_BUCKET=...,
+FIREBASE_STORAGE_BUCKET=...
+
+# Stripe
+
+STRIPE_KEY=...
+STRIPE_WEBHOOK_SECRET=...
