--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -53,6 +53,7 @@
     "redis": "4.6.5",
     "schemas": "workspace:*",
     "socket.io": "4.6.1",
+    "stripe": "14.20.0",
     "types": "workspace:*",
     "winston": "3.8.2",
     "zod": "3.21.4"
