refactor: clean up unused code

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ship",
   "scripts": {
-    "infra": "bash ./bin/start.sh mongo redis mongo-replicator",
+    "infra": "bash ./bin/start.sh mongo mongo-replicator",
     "turbo-start": "turbo run development --filter=\"./apps/*\" --filter=\"./packages/*\" --filter=\"!react-email-client\" ",
     "docker": "bash ./bin/start.sh",
     "start": "bash ./bin/run-all.sh",
