--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -10,28 +10,16 @@
 # should be updated accordingly.
 
 # If you are using Docker for the development process,
-# you need to use the following variables for MongoDB and Redis:
+# you need to use the following variables for MongoDB:
 # MONGO_URI=mongodb://root:root@mongo/api-development?authSource=admin&replicaSet=rs
-# REDIS_URI=redis://:@redis:6379
 
 # MongoDB
 MONGO_URI=mongodb://root:root@localhost:27017/api-development?authSource=admin&replicaSet=rs&tls=false&directConnection=true
 MONGO_DB_NAME=api-development
 
-# Redis
-REDIS_URI=redis://:@localhost:6379
-
 # Application URLs
 API_URL=http://localhost:3001
 WEB_URL=http://localhost:3002
-
-# Cloud storage
-# If you are using DO Spaces, then you can use the following guide to configure cloud storage environments:
-# https://docs.digitalocean.com/products/spaces/reference/s3-sdk-examples/
-# CLOUD_STORAGE_ENDPOINT=https://....digitaloceanspaces.com
-# CLOUD_STORAGE_ACCESS_KEY_ID=...
-# CLOUD_STORAGE_SECRET_ACCESS_KEY=..
-# CLOUD_STORAGE_BUCKET=...
 
 # Firebase
 
