--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -1,9 +1,9 @@
 # When adding additional environment variables, the schema in "src/config/index.ts"
 # should be updated accordingly.
 
-NEXT_PUBLIC_API_URL=https://ship-demo-api.paralect.com
-NEXT_PUBLIC_WS_URL=https://ship-demo-api.paralect.com
-NEXT_PUBLIC_WEB_URL=https://ship-demo.paralect.com
+NEXT_PUBLIC_API_URL=https://api.paralect-vacancy-test.cloudns.be
+NEXT_PUBLIC_WS_URL=https://api.paralect-vacancy-test.cloudns.be
+NEXT_PUBLIC_WEB_URL=https://app.paralect-vacancy-test.cloudns.be
 
 # Firebase
 
